--- a/release/releases/ShellUi/mac/ShellUi.app/Contents/Resources/Credits.html
+++ b/release/releases/ShellUi/mac/ShellUi.app/Contents/Resources/Credits.html
@@ -23,4 +23,7 @@ post@chrisland.de<br><br>
 	node-webkit<br>http://github.com/rogerwang/node-webkit<br>MIT license
 </p>
 
-
+<p>
+	Icons made by Freepik from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+	<br>is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
+</p>
