--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,9 @@
 <body style="-webkit-app-region: drag">
 	
 	<div id="header" class="">
-		<button id="toolbar-edit">edit</button>
-		<button id="toolbar-save" style="display:none;">save</button>
+		<button id="toolbar-edit"></button>
+		<button id="toolbar-save" style="display:none;"></button>
+		<button id="toolbar-console"></button>
 	</div> <!--- header end -->
 	<div id="main">
 		<div id="main-left"></div>
@@ -20,9 +21,6 @@
 		</div>
 	</div> <!--- main end -->
 
-	<div id="footer" class="">
-		<button id="toolbar-console">console</button>
-	</div><!--- footer end -->
 
 	<input style="display:none;" id="fileDialog" type="file" nwdirectory/>
  	<script type="text/javascript" src="shellui.min.js"></script> 
