exec / style / dir bug

--- a/release/releases/ShellUi/mac/ShellUi.app/Contents/Resources/app.nw/index.html
+++ b/release/releases/ShellUi/mac/ShellUi.app/Contents/Resources/app.nw/index.html
@@ -16,7 +16,9 @@
 	<div id="main">
 		<div id="main-left"></div>
 		<div id="main-right">
-			<div class="code"></div>
+			<div class="code" style="display:none;"></div>
+			<div class="error" style="display:none;"></div>
+			<div class="live"></div>
 			<div class="output"></div>
 		</div>
 	</div> <!--- main end -->
