--- a/release/releases/ShellUi/mac/ShellUi.app/Contents/Resources/app.nw/index.html
+++ b/release/releases/ShellUi/mac/ShellUi.app/Contents/Resources/app.nw/index.html
@@ -24,7 +24,8 @@
 			<div class="code" style="display:none;"></div>
 		</div>
 	</div> <!--- main end -->
-
+	<div id="footer">
+	</div>
 
 	<input style="display:none;" id="fileDialog" type="file" nwdirectory/>
  	<script type="text/javascript" src="shellui.min.js"></script> 
